@@ -4,7 +4,7 @@ import com.software.grey.models.entities.Post;
 import com.software.grey.models.entities.User;
 import com.software.grey.models.enums.Feeling;
 import com.software.grey.models.projections.FeelingCountProjection;
-import com.software.grey.services.implementations.PostService;
+import com.software.grey.services.PostService;
 import lombok.AllArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -12,11 +12,11 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @Component
-public class SameFeelingStrat extends RecommendationStrategy{
+public class SameFeelingStrat extends RecommendationStrategy {
+
     private PostService postService;
 
     @Override
@@ -33,6 +33,6 @@ public class SameFeelingStrat extends RecommendationStrategy{
                     Pageable page = PageRequest.of(pageNumber, numOfPosts);
                     return postService.getByFeelings(entry.getKey(), user.getId(), page).stream();
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
