@@ -14,15 +14,13 @@ import com.software.grey.models.mappers.PostMapper;
 import com.software.grey.models.projections.FeelingCountProjection;
 import com.software.grey.repositories.PostRepository;
 import com.software.grey.repositories.ReportedPostRepository;
-import com.software.grey.services.IPostService;
-import com.software.grey.services.UserService;
+import com.software.grey.services.PostService;
 import com.software.grey.utils.ErrorMessages;
 import com.software.grey.utils.SecurityUtils;
 import lombok.AllArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.sql.Timestamp;
@@ -30,14 +28,10 @@ import java.time.Instant;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.UUID;
-import java.util.stream.Collectors;
-
-import static com.software.grey.utils.ErrorMessages.POST_REPORTED_BEFORE;
 
 @Service
 @AllArgsConstructor
-public class PostService implements IPostService {
+public class PostServiceImpl implements PostService {
 
     private PostRepository postRepository;
 
@@ -45,14 +39,11 @@ public class PostService implements IPostService {
 
     private PostMapper postMapper;
 
-    private UserService userService;
-
     private SecurityUtils securityUtils;
 
     public String add(PostDTO postDTO) {
+        User user = securityUtils.getCurrentUser();
         Post post = postMapper.toPost(postDTO);
-        String userName = securityUtils.getCurrentUserName();
-        User user = userService.findByUserName(userName);
         post.setUser(user);
         post.setPostTime(Timestamp.from(Instant.now()));
         postRepository.save(post);
@@ -68,7 +59,7 @@ public class PostService implements IPostService {
                 .reporter(reporter)
                 .build();
 
-        if(userReportedPostBefore(post, reporter))
+        if (userReportedPostBefore(post, reporter))
             throw new UserReportedPostBeforeException(ErrorMessages.POST_REPORTED_BEFORE);
 
         reportedPostRepository.save(reportedPost);
@@ -78,8 +69,8 @@ public class PostService implements IPostService {
         return reportedPostRepository.existsById(new ReportedPostId(post, reporter));
     }
 
-    public Post findPostById(String id){
-        return postRepository.findById(id).orElseThrow(() -> new PostNotFoundException("Post not found"));
+    public Post findPostById(String id) {
+        return postRepository.findById(id).orElseThrow(() -> new PostNotFoundException(ErrorMessages.POST_NOT_FOUND));
     }
 
     public Page<PostDTO> getReportedPosts(PostFilterDTO postFilterDTO) {
@@ -96,9 +87,8 @@ public class PostService implements IPostService {
         String userName = securityUtils.getCurrentUserName();
         Pageable pageable = PageRequest.of(
                 postFilterDTO.getPageNumber(),
-                postFilterDTO.getPageSize(),
-                Sort.by("postTime").descending());
-        return postRepository.findDiaryByUsernameAndDayMonthYear(
+                postFilterDTO.getPageSize());
+        return postRepository.findDiaryByUsernameAndDayMonthYearSortedByDate(
                 userName,
                 postFilterDTO.getDay(),
                 postFilterDTO.getMonth(),
@@ -110,10 +100,10 @@ public class PostService implements IPostService {
         String userName = securityUtils.getCurrentUserName();
         List<String> feelings = Optional.ofNullable(postFilterDTO.getFeelings())
                 .filter(list -> !list.isEmpty())
-                .map(list -> list.stream().map(Enum::name).collect(Collectors.toList()))
+                .map(list -> list.stream().map(Enum::name).toList())
                 .orElseGet(() -> Arrays.stream(Feeling.values())
                         .map(Enum::name)
-                        .collect(Collectors.toList()));
+                        .toList());
 
         Pageable pageable = PageRequest.of(
                 postFilterDTO.getPageNumber(),
@@ -124,26 +114,22 @@ public class PostService implements IPostService {
     }
 
     public void delete(String postId) {
-
         if (postId == null) {
-            throw new NullPointerException("Post id is null");
+            throw new NullPointerException(ErrorMessages.POST_ID_NULL);
         }
-
         String currentUserId = securityUtils.getCurrentUserId();
-
         Post post = findPostById(postId);
-        if(!post.getUser().getId().equals(currentUserId)){
-            throw new UserNotAuthorizedException("You are not authorized to delete this post");
+        if (!post.getUser().getId().equals(currentUserId)) {
+            throw new UserNotAuthorizedException(ErrorMessages.USER_NOT_AUTHORIZED);
         }
-
-        postRepository.deleteById(postId) ;
+        postRepository.deleteById(postId);
     }
 
     public List<FeelingCountProjection> getCountOfPostedFeelings(User user) {
         return postRepository.findCountOfFeelingsByUser(user.getId());
     }
 
-    public List<Post> getByFeelings(Feeling feeling, String userId, Pageable page){
+    public List<Post> getByFeelings(Feeling feeling, String userId, Pageable page) {
         return postRepository.findByPostFeelingsAndUserIdNot(feeling, userId, page);
     }
 
@@ -157,7 +143,6 @@ public class PostService implements IPostService {
         if (!reportedPostRepository.existsByPostId(postId)) {
             throw new PostNotFoundException(ErrorMessages.POST_ALREADY_DELETED);
         }
-
         reportedPostRepository.deleteByPostId(postId);
     }
 }
